--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,6 @@
 language: java
 jdk:
   - oraclejdk8
+
+script:
+  - mvn clean  jacoco:prepare-agent test jacoco:report org.pitest:pitest-maven:mutationCoverage checkstyle:checkstyle findbugs:findbugs javadoc:javadoc 
